hosting and better styling

--- a/src/app/components/consent/consent.component.html
+++ b/src/app/components/consent/consent.component.html
@@ -1,8 +1,8 @@
 <app-header></app-header>
 <div class="consent-container">
-  <p>
-    This app needs to access your current location. Please click allow access on
-    the next page :)
-  </p>
+  <div class="text-container">
+    <p>This app needs to access your current location.</p>
+    <p>Please click allow access on the next page 😎</p>
+  </div>
   <button class="speed-button primary" (click)="goToHome()">Continue</button>
 </div>
