--- a/src/app/components/consent/consent.component.scss
+++ b/src/app/components/consent/consent.component.scss
@@ -1,9 +1,19 @@
 .consent-container {
-  width: 100%;
+  max-width: 375px;
   display: flex;
   flex-direction: column;
   gap: 3rem;
   justify-content: center;
   align-items: center;
-  padding-top: 10rem;
+  padding: 10rem 3rem 0 3rem;
+
+  .text-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  p {
+    margin: 0;
+  }
 }
