--- a/src/app/components/speed/speed.component.html
+++ b/src/app/components/speed/speed.component.html
@@ -1,5 +1,5 @@
 <div class="speedo-container">
-  <div class="numbers-container">
+  <div class="numbers-container" [ngStyle]="{ 'font-size': fontSize }">
     <p>{{ speed }}</p>
   </div>
   <div class="units-container">
