--- a/src/app/components/consent/consent.component.scss
+++ b/src/app/components/consent/consent.component.scss
@@ -6,6 +6,8 @@
   justify-content: center;
   align-items: center;
   padding: 10rem 3rem 0 3rem;
+  margin-left: auto;
+  margin-right: auto;
 
   .text-container {
     display: flex;
