--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -10,4 +10,10 @@
     flex-direction: column;
     gap: 1rem;
   }
+
+  .divider-line {
+    width: 100%;
+    height: 1px;
+    background-color: white;
+  }
 }
